--- a/documentation/operators/combinelatest.html
+++ b/documentation/operators/combinelatest.html
@@ -121,8 +121,48 @@ Completed</pre></div>
        only emits items when the single source Observable emits an item (not when <em>any</em> of the
        Observables that are passed to the operator do, as <code>combineLatest</code> does).
       </p>
+      <h4>Sample code</h4>
+      <div class="code javascript"><pre>
+/* Have staggering intervals */
+var source1 = Rx.Observable.interval(140)
+    .map(function (i) { return 'First: ' + i; });
+
+var source2 = Rx.Observable.interval(50)
+    .map(function (i) { return 'Second: ' + i; });
+
+// When source1 emits a value, combine it with the latest emission from source2.
+var source = source1.withLatestFrom(
+    source2,
+    function (s1, s2) { return s1 + ', ' + s2; }
+).take(4);
+
+var subscription = source.subscribe(
+    function (x) {
+        console.log('Next: ' + x.toString());
+    },
+    function (err) {
+        console.log('Error: ' + err);
+    },
+    function () {
+        console.log('Completed');
+    });</pre></div>
+      <div class="output"><pre>
+Next: First: 0, Second: 1
+Next: First: 1, Second: 4
+Next: First: 2, Second: 7
+Next: First: 3, Second: 10
+Completed</pre></div>
       </figcaption>
      </figure>
+     <p>
+      These two operators are both available in each of the following distributions:
+     </p>
+     <ul>
+      <li><code>rx.js</code></li>
+      <li><code>rx.compat.js</code></li>
+      <li><code>rx.lite.js</code></li>
+      <li><code>rx.lite.compat.js</code></li>
+     </ul>
   {% endlang_operator %}
 
   {% lang_operator RxKotlin %}
